[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anndata = "0.2.0"
bincode = "1.3.3"
clap = "4.1.14"
csv = "1.2.1"
futures = "0.3.27"
indicatif = "0.17.3"
noodles = { version = "0.35.0", features = ["bam", "async", "core", "sam", "bgzf"] }
rayon = "1.7.0"
rust-htslib = "0.41.1"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate" ] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-scope = "0.0.0"
tokio-scoped = "0.2.0"
